Run Prettier with latest version

--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,14 @@ body {
 	max-width: 600px;
 	margin: 0 auto;
 	padding: 20px;
-	font-family: "Ubuntu Mono", Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace;
+	font-family:
+		"Ubuntu Mono",
+		Menlo,
+		Consolas,
+		Monaco,
+		Liberation Mono,
+		Lucida Console,
+		monospace;
 	font-size: 24px;
 
 	/* background: #212121; */
